# recflow

./: README.md  pyproject.toml
examples/: ecommerce_quickstart.py  fastapi_production.py  flask_admin_example.py
src/recflow/: __init__.py  algorithms.py  candidates.py  engine.py  ranking.py  rules.py  scoring.py  storage.py
src/recflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/recflow/admin/: dashboard.html
src/recflow/ext/: django.py  fastapi.py  flask.py
tests/: test_engine.py
