[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recflow"
version = "0.1.0"
description = "A simple, fast, drop-in hybrid recommendation library for Python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Developer" }
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
redis = ["redis>=5.0.0"]
fastapi = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
django = ["django>=4.0.0", "celery>=5.3.0"]
flask = ["flask>=2.0.0"]
all = [
    "redis>=5.0.0", 
    "fastapi>=0.100.0", 
    "uvicorn>=0.20.0", 
    "django>=4.0.0", 
    "celery>=5.3.0", 
    "flask>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/developer/recflow"
